# HeapMemory

./: .gitignore  CMakeLists.txt  README.md  main.c
App/: CMakeLists.txt  main.cpp
Manager/: manager.cpp  manager.h
Sbrk/Manager/: CMakeLists.txt  manager.h
virtualMemory/: main.c
