cmake_minimum_required(VERSION 3.11)
project(HeapManager VERSION 1.0.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
set(CMAKE_BUILD_TYPE Debug)
option(COMPILE "Whether to compile" ON)
add_subdirectory(Manager)
if(COMPILE)
    add_subdirectory(App)
else()
    message("Without compiling")
endif()
